--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kumar Saurabh</title>
+    <title>Manjul Solanke</title>
     <meta name="description" content="Golang Developer, DevOps Engineer, Freelancer">
     <meta name="keywords" content="Go Developer, Golang Developer, DevOps, DevOps Engineer, Freelancer, Go, Golang, Kubernetes, Docker, GRPC, Terraform, Helm, HTML, CSS, JavaScript">
-    <meta name="author" content="Kumar Saurabh">
+    <meta name="author" content="Manjul Solanke">
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/14794708?v=4" />
     <meta property='og:title' content="Golang Developer, DevOps Engineer, Freelancer"/>
     <meta property='og:description' content="I mostly work with Golang and Cloud-Native technologies!"/>
@@ -24,14 +24,14 @@
     </div>
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars2.githubusercontent.com/u/14794708?v=4) center;"></div>
-      <div id="userbio" style="display: block;">Hey, I am Saurabh! 👋</div>
+      <div id="userbio" style="display: block;">Hey, I am Manjul! 👋</div>
       <p id="singleline"> Go Developer | DevOps Engineer </p>
       <div id="about">
                 <span style="display:none;"><i class="fas fa-users"></i> &nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; India</span>
                 <span style="display:block;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
-                <!-- <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://itsksaurabh.github.io/">https://itsksaurabh.github.io/</a></span> -->
+                <!-- <span style="display:block;"><i class="fas fa-link"></i> &nbsp; <a href="https://manjulsolanke.github.io/">https://manjulsolanke.github.io/</a></span> -->
                 <div class="socials">
                 <span style="display:block;">
                         <a href="https://github.com/itsksaurabh" target="_blank" class="socials">
