--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="spinner"></div>
     </div>
     <div id="profile">
-      <div id="profile_img" style="background: url(https://github.com/manjulsolanke/manjulsolanke/blob/main/myphoto.png) center;"></div>
+      <div id="profile_img" style="background: url(https://github.com/manjulsolanke/manjulsolanke/blob/main/myphoto.png?raw=true) center;"></div>
       <div id="userbio" style="display: block;">Hey, I am Manjul! 👋</div>
       <p id="singleline"> Go Developer | DevOps Engineer </p>
       <div id="about">
