--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="description" content="Golang Developer, DevOps Engineer, Freelancer">
     <meta name="keywords" content="Go Developer, Golang Developer, DevOps, DevOps Engineer, Freelancer, Go, Golang, Kubernetes, Docker, GRPC, Terraform, Helm, HTML, CSS, JavaScript">
     <meta name="author" content="Manjul Solanke">
-    <meta property="og:image" content="https://avatars2.githubusercontent.com/u/14794708?v=4" />
+    <meta property="og:image" content="https://github.com/manjulsolanke/manjulsolanke/blob/main/myphoto.png?raw=true" />
     <meta property='og:title' content="Golang Developer, DevOps Engineer, Freelancer"/>
     <meta property='og:description' content="I mostly work with Golang and Cloud-Native technologies!"/>
-    <meta property='og:url' content="https://www.kumar-saurabh.com" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
-  <link rel="icon" href="https://avatars2.githubusercontent.com/u/14794708?v=4" type="image/png"></head>
+  <link rel="icon" href="https://github.com/manjulsolanke/manjulsolanke/blob/main/myphoto.png?raw=true" type="image/png"></head>
 
   <body>
     <div id="loading">
@@ -25,7 +24,7 @@
     <div id="profile">
       <div id="profile_img" style="background: url(https://github.com/manjulsolanke/manjulsolanke/blob/main/myphoto.png?raw=true) center;"></div>
       <div id="userbio" style="display: block;">Hey, I am Manjul! 👋</div>
-      <p id="singleline"> Go Developer | DevOps Engineer </p>
+      <p id="singleline"> DevOps Engineer </p>
       <div id="about">
                 <span style="display:none;"><i class="fas fa-users"></i> &nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
