--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                     <div class="shooting_star"></div>
             </div>
 
-          <h1>About.</h1>
+          <h1>About Me.</h1>
           <p>
-            I am a passionate and creative developer from India with a strong interest in Open source projects. I hold a Bachelor of Technology ( B. Tech ) degree in Computer Science and Engineering.
-            I mostly work on Backend development with Golang and Cloud-Native technologies. I have multiple years of professional remote working experience  and have worked in distributed but tight-knit teams that span multiple continents across the globe.
+            Experienced DevOps Engineer with improving developmental agility by leveraging cloud-native applications and modern practices to create business value. 
+            Highly proficient in building CI/CD pipelines, automating cloud infrastructure, orchestrating containers using Kubernetes, optimizing mission-critical deployments, application containerization, continuous monitoring and DevOps processes. A highly motivated and energetic team player with excellent communication and interpersonal skills.
             <br>
             <br>
             I have contributed to some of the big Open Source projects by <b style="color:powderblue;">𝗚𝗼𝗼𝗴𝗹𝗲, 𝗚𝗶𝘁𝗵𝘂𝗯, 𝗗𝗶𝗴𝗶𝘁𝗮𝗹𝗢𝗰𝗲𝗮𝗻, 𝗢𝗽𝗲𝗻𝗙𝗮𝗮𝗦, 𝗛𝗲𝗹𝗹𝗼𝗙𝗿𝗲𝘀𝗵, 𝗔𝗿𝗸𝗮𝗱𝗲</b> etc. I am also a startup enthusiast and have multiple years of experience in building tech startups from scratch.
