--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Manjul Solanke</title>
-    <meta name="description" content="Golang Developer, DevOps Engineer, Freelancer">
+    <meta name="description" content="DevOps Engineer">
     <meta name="keywords" content="Go Developer, Golang Developer, DevOps, DevOps Engineer, Freelancer, Go, Golang, Kubernetes, Docker, GRPC, Terraform, Helm, HTML, CSS, JavaScript">
     <meta name="author" content="Manjul Solanke">
     <meta property="og:image" content="https://github.com/manjulsolanke/manjulsolanke/blob/main/myphoto.png?raw=true" />
