removed twitter old link and fixed email address

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </span>
                 <span style="display:block;"><a href="https://www.linkedin.com/in/manjulsolanke/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
                 <span style="display:block;">
-                    <a href="mailto: solankemn@gmail.com" target="_blank" class="socials" aria-label="Email: solankemn@gmail.com">
+                    <a href="solankemn@gmail.com" target="_blank" class="socials" aria-label="Email: solankemn@gmail.com">
                     <svg height="15" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.9434 1.52996L16.9243 15.7574C16.7018 16.7662 16.1009 17.011 15.2627 16.5362L10.6637 13.1463L8.44574 15.2826C8.20095 15.5274 7.99325 15.7351 7.51851 15.7351L7.84489 11.0545L16.368 3.35475C16.7389 3.02836 16.2864 2.84292 15.7968 3.1693L5.26349 9.80084L0.723777 8.38403C-0.262794 8.07249 -0.285048 7.39746 0.931477 6.92272L18.6675 0.0834836C19.4909 -0.21323 20.2104 0.283765 19.9434 1.52996Z" fill="#ffffff"/></svg>
                     </a>             
                 </span>
@@ -133,7 +133,6 @@
             <h1>Testimonials.</h1>
             <p>What others think of me?</p>
             <a href="https://www.linkedin.com/in/manjulsolanke/"><img src="assets/r1.png" id="img_0_original" alt="t1"></a>
-            #<a href="https://twitter.com/BretFisher/status/1253816362692161536"><img src="assets/t6.png" id="img_0_original" alt="t6"></a>          
         </div>
         <div id="footer">
             <a>Made with ❤️ in India 🇮🇳</a>
