Changed about me

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="shooting_star"></div>
             </div>
 
-          <h1>About.</h1>
+          <h1>About Me.</h1>
           <p>
             Experienced DevOps Engineer with improving developmental agility by leveraging cloud-native applications and modern practices to create business value.
             Highly proficient in building CI/CD pipelines, automating cloud infrastructure, orchestrating containers using Kubernetes, optimizing mission-critical deployments, application containerization, continuous monitoring and DevOps processes. 
