removed unwanted images

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             <h1>Testimonials.</h1>
             <p>What others think of me?</p>
             <a href="https://www.linkedin.com/in/manjulsolanke/"><img src="assets/r1.png" id="img_0_original" alt="t1"></a>
+            <a href="https://www.linkedin.com/in/manjulsolanke/"><img src="assets/r2.png" id="img_0_original" alt="t1"></a>
         </div>
         <div id="footer">
             <a>Made with ❤️ in India 🇮🇳</a>
