--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div>
                   <h1>Career.</h1>
                   </div>
-                  <h2>DevOps Engineer at GlobalLogic &nbsp;&nbsp; (Since Oct 2018)</h2> 
+                  <h2>(<b style="color:powderblue;">DevOps Engineer</b> at GlobalLogic &nbsp;&nbsp; (Since Oct 2018)</h2> 
                   <p>In the late  2016,  a startup, at the age of 20, which was a waste management company. 
                     We provided a free doorstep service to collect junk/scrap material from different locations and the environment-friendly service to create go green.</p> 
                     <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
