added more curated contents

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div>
                   <h1>Career.</h1>
                   </div>
-                  <h2>(<b style="color:powderblue;">DevOps Engineer</b> at GlobalLogic &nbsp;&nbsp; (Since Oct 2018)</h2> 
+                  <h2><b style="color:powderblue;">DevOps Engineer</b> at GlobalLogic &nbsp;&nbsp;</h2> 
                   <p>In the late  2016,  a startup, at the age of 20, which was a waste management company. 
                     We provided a free doorstep service to collect junk/scrap material from different locations and the environment-friendly service to create go green.</p> 
                     <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
@@ -102,29 +102,28 @@
                       <li>The startup was featured on the headlines of different newspapers and local news channels.</li>
                       <li>The startup was also appreciated by Sir Manish Sisodia who has been the Deputy Chief Minister of Delhi ( India ) and also a social activist and active member of the National Executive Committee of the <a style="color: aliceblue" href="https://en.wikipedia.org/wiki/Aam_Aadmi_Party" target="_blank">Aam Aadmi Party.</a></li>
                     </ul>
-                  <h2>Team lead at Persistent Systems  &nbsp;&nbsp; (Nov 2016 to Oct 2018)</h2> 
-                  <p>In the late  2016,  a startup, at the age of 20, which was a waste management company. 
-                    We provided a free doorstep service to collect junk/scrap material from different locations and the environment-friendly service to create go green.</p> 
+                  <h2><b style="color:powderblue;">Platform Engineer</b> at Persistent Systems  &nbsp;&nbsp;</h2> 
+                  <p>At Persistent System I worked as Platform Engineer in IOT domain. Played mutiple roles such as Platform Engineer, DevOps engineer and Team lead.</p> 
                     <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
-                      <li>The company served thousands of customers at some major cities of Rajasthan and Madhya Pradesh ( India ).</li>
-                      <li>The startup was featured on the headlines of different newspapers and local news channels.</li>
-                      <li>The startup was also appreciated by Sir Manish Sisodia who has been the Deputy Chief Minister of Delhi ( India ) and also a social activist and active member of the National Executive Committee of the <a style="color: aliceblue" href="https://en.wikipedia.org/wiki/Aam_Aadmi_Party" target="_blank">Aam Aadmi Party.</a></li>
+                      <li>Worked on XEN and KVM based environment. Managing and supporting AWS based infrastructure.</li>
+                      <li>Deployed and configured Ansible playbooks to configure and run tasks.</li>
+                      <li>Worked with Database, Engineering, Support teams to understand the data model and automate procedures.</li>
                     </ul>
-                  <h2>Senior Specialist at HCL Technologies &nbsp;&nbsp; (Oct 2013 to Nov 2018)</h2> 
-                  <p>In the late  2016,  a startup, at the age of 20, which was a waste management company. 
-                    We provided a free doorstep service to collect junk/scrap material from different locations and the environment-friendly service to create go green.</p> 
+                  <h2><b style="color:powderblue;">Platform Engineer</b> at HCL Technologies &nbsp;&nbsp;</h2> 
+                  <p>At HCL Technologies I worked on VMware virtualization platform and Web applications.</p>
                     <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
-                      <li>The company served thousands of customers at some major cities of Rajasthan and Madhya Pradesh ( India ).</li>
-                      <li>The startup was featured on the headlines of different newspapers and local news channels.</li>
-                      <li>The startup was also appreciated by Sir Manish Sisodia who has been the Deputy Chief Minister of Delhi ( India ) and also a social activist and active member of the National Executive Committee of the <a style="color: aliceblue" href="https://en.wikipedia.org/wiki/Aam_Aadmi_Party" target="_blank">Aam Aadmi Party.</a></li>
+                      <li>Supporting the critical application in development and production env running on Linux
+                        servers (RHEL, OLE, SUSE and CentOS) in VMware virtualization and cloud infrastructure.</li>
+                      <li>Live migration of VMs and storage using VMotion and Storage VMotion within and across ESXihosts/storage arrays without service disruptions.</li>
+                      <li>Working closely with the IT security team to Security Vulnerability scanning and fixing security issue on Linux servers.</li>
                     </ul>
-                  <h2>Project Engineer at GlobalLogic &nbsp;&nbsp; (March 2011 to Oct 2013)</h2> 
-                  <p>In the late  2016,  a startup, at the age of 20, which was a waste management company. 
-                    We provided a free doorstep service to collect junk/scrap material from different locations and the environment-friendly service to create go green.</p> 
+                  <h2><b style="color:powderblue;">Unix Admin</b> at Wipro Technologies &nbsp;&nbsp;</h2> 
+                  <p>Worked as Unix Admin at Wipro, I had a chance to work on Unix like Operating systems and an understanding of the infrastructure. Implemented system administration tasks, such as patching software and hardware upgrades, troubleshooting and problem resolution
+                    Monitored and maintained the disk space and backup systems and implemented change controls, capacity planning and growth projections on the system.</p> 
                     <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
-                      <li>The company served thousands of customers at some major cities of Rajasthan and Madhya Pradesh ( India ).</li>
-                      <li>The startup was featured on the headlines of different newspapers and local news channels.</li>
-                      <li>The startup was also appreciated by Sir Manish Sisodia who has been the Deputy Chief Minister of Delhi ( India ) and also a social activist and active member of the National Executive Committee of the <a style="color: aliceblue" href="https://en.wikipedia.org/wiki/Aam_Aadmi_Party" target="_blank">Aam Aadmi Party.</a></li>
+                      <li>Delivered the 24x7 OS support to more than 1000 mission-critical servers running Database and Applications on Solaris and Linux boxes.</li>
+                      <li>Monitoring system performance of servers and troubleshooting OS related issues.</li>
+                      <li>Installation, Upgradation, Configuration, Maintenance, Patch/Package management and Troubleshooting of the Operating systems and Services.</li>
                     </ul>                                        
                   </div> 
         <div id="blog">
