--- a/index.html
+++ b/index.html
@@ -95,12 +95,16 @@
                   <h1>Career.</h1>
                   </div>
                   <h2><b style="color:powderblue;">DevOps Engineer</b> at GlobalLogic &nbsp;&nbsp;</h2> 
-                  <p>In the late  2016,  a startup, at the age of 20, which was a waste management company. 
-                    We provided a free doorstep service to collect junk/scrap material from different locations and the environment-friendly service to create go green.</p> 
+                  <p>In the late  2018, I started DevOps Engineer journey at GlobalLogic, I had the chance to work on Cloud-Native, Kubernetes-centric and Miroservice based architecture. 
                     <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
-                      <li>The company served thousands of customers at some major cities of Rajasthan and Madhya Pradesh ( India ).</li>
-                      <li>The startup was featured on the headlines of different newspapers and local news channels.</li>
-                      <li>The startup was also appreciated by Sir Manish Sisodia who has been the Deputy Chief Minister of Delhi ( India ) and also a social activist and active member of the National Executive Committee of the <a style="color: aliceblue" href="https://en.wikipedia.org/wiki/Aam_Aadmi_Party" target="_blank">Aam Aadmi Party.</a></li>
+                      <li>Design, build and deploy Kubernetes platform on AWS cloud for Microservices based architecture. .</li>
+                      <li>Implemented centralized logging using Kibana, Elasticsearch and Filebeat/Fluentd.</li>
+                      <li>Implemented distributed tracking for microservices using Jaeger.</li>
+                      <li>Implemented Velero tool for backup, restore and perform disaster recovery.</li>
+                      <li>Implemented CI-CD pipeline of Microservices to Kubernetes clusters.</li>
+                      <li>Deployed Kubernetes-native applications such as Prometheus, Elasticsearch (ECK), Jaeger, Grafana
+                        using Operator framework.</li>
+                      <li>Creating repeatable and templated deployments for Kubernetes applications with help of Helm.</li>
                     </ul>
                   <h2><b style="color:powderblue;">Platform Engineer</b> at Persistent Systems  &nbsp;&nbsp;</h2> 
                   <p>At Persistent System I worked as Platform Engineer in IOT domain. Played mutiple roles such as Platform Engineer, DevOps engineer and Team lead.</p> 
