--- a/index.html
+++ b/index.html
@@ -62,21 +62,14 @@
             A highly motivated and energetic team player with excellent communication and interpersonal skills.
             <br>
             <br>
-            I have contributed to some of the big Open Source projects by <b style="color:powderblue;">𝗚𝗼𝗼𝗴𝗹𝗲, 𝗚𝗶𝘁𝗵𝘂𝗯, 𝗗𝗶𝗴𝗶𝘁𝗮𝗹𝗢𝗰𝗲𝗮𝗻, 𝗢𝗽𝗲𝗻𝗙𝗮𝗮𝗦, 𝗛𝗲𝗹𝗹𝗼𝗙𝗿𝗲𝘀𝗵, 𝗔𝗿𝗸𝗮𝗱𝗲</b> etc. I am also a startup enthusiast and have multiple years of experience in building tech startups from scratch.
-            <br>
-            <br>
-            Along with my Full-time job, I also worked as a Freelancer with multiple international clients including some popular companies like <b style="color:powderblue;">Toggl.com</b>, etc.
-            <br>
-            <br>
-            I am Fully-committed to designing and developing innovative materials. I am highly self-motivated, enthusiastic and always willing to learn more. 
+            I am Fully-committed to designing, build and developing Cloud-Native infrastructure, I am highly self-motivated, enthusiastic and always willing to learn more. 
                 <p>
                 </p>
-
                 <div>
                         <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
-                            <li>I mostly work on developing and debugging web servers, APIs, Libraries and tools using <b style="color:powderblue;">𝗚𝗼𝗹𝗮𝗻𝗴</b> and <b style="color:powderblue;">𝗝𝗮𝘃𝗮𝘀𝗰𝗿𝗶𝗽𝘁</b>.</li>
-                            <li>Proficient in building servers and APIs using <b style="color:powderblue;">𝗚𝗥𝗣𝗖</b>, <b style="color:powderblue;">𝗥𝗘𝗦𝗧</b>, <b style="color:powderblue;">𝗣𝗿𝗼𝘁𝗼𝗰𝗼𝗹 𝗯𝘂𝗳𝗳𝗲𝗿𝘀</b>, <b style="color:powderblue;">𝗛𝗧𝗧𝗣/𝗝𝗦𝗢𝗡</b>.</li>
-                            <li>Proficient with <b style="color:powderblue;">𝗠𝗮𝗰</b> / <b style="color:powderblue;">𝗟𝗶𝗻𝘂𝘅</b>, <b style="color:powderblue;">𝗕𝗮𝘀𝗵</b>, <b style="color:powderblue;">𝗚𝗜𝗧</b> and <b style="color:powderblue;">𝗦𝗵𝗲𝗹𝗹</b> scripting.</li>
+                            <li>I mostly work on <b style="color:powderblue;">Kubernates-centric</b> and <b style="color:powderblue;">Cloud platform</b>.</li>
+                            <li>Proficient in infrastructure automation using IaC tools such as <b style="color:powderblue;">Terraform</li>
+                            <li>Proficient with <b style="color:powderblue;">Linux</b> / <b style="color:powderblue;">𝗟𝗶𝗻𝘂𝘅</b>, <b style="color:powderblue;">𝗚𝗜𝗧</b> and <b style="color:powderblue;">𝗦𝗵𝗲𝗹𝗹</b> scripting.</li>
                             <li>Proficient in building fully automated <b style="color:powderblue;">𝗖𝗜/𝗖𝗗</b> pipelines for code deployment using <b style="color:powderblue;">𝗚𝗶𝘁𝗹𝗮𝗯 𝗖𝗜</b>, <b style="color:powderblue;">𝗖𝗶𝗿𝗰𝗹𝗲𝗖𝗜</b>, etc.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗗𝗼𝗰𝗸𝗲𝗿</b> and container orchestration tools such as <b style="color:powderblue;">𝗞𝘂𝗯𝗲𝗿𝗻𝗲𝘁𝗲𝘀</b>, <b style="color:powderblue;">𝗗𝗼𝗰𝗸𝗲𝗿-𝗦𝘄𝗮𝗿𝗺</b>.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗛𝗲𝗹𝗺</b> charts to develop, manage and release helm packages for k8s.</li>
