--- a/index.html
+++ b/index.html
@@ -68,19 +68,13 @@
                 <div>
                         <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
                             <li>I mostly work on <b style="color:powderblue;">Kubernates-centric</b> and <b style="color:powderblue;">Cloud platform</b>.</li>
-                            <li>Proficient in infrastructure automation using IaC tools such as <b style="color:powderblue;">Terraform</li>
-                            <li>Proficient with <b style="color:powderblue;">Linux</b> / <b style="color:powderblue;">𝗟𝗶𝗻𝘂𝘅</b>, <b style="color:powderblue;">𝗚𝗜𝗧</b> and <b style="color:powderblue;">𝗦𝗵𝗲𝗹𝗹</b> scripting.</li>
-                            <li>Proficient in building fully automated <b style="color:powderblue;">𝗖𝗜/𝗖𝗗</b> pipelines for code deployment using <b style="color:powderblue;">𝗚𝗶𝘁𝗹𝗮𝗯 𝗖𝗜</b>, <b style="color:powderblue;">𝗖𝗶𝗿𝗰𝗹𝗲𝗖𝗜</b>, etc.</li>
+                            <li>Proficient in Observability tools such as <b style="color:powderblue;">Prometheus</b>, <b style="color:powderblue;">Grafana</b>, <b style="color:powderblue;">Kibana</b>, <b style="color:powderblue;">FluentD</b>, <b style="color:powderblue;">Jaeger</b></li>  
+                            <li>Proficient with <b style="color:powderblue;">Linux</b> / <b style="color:powderblue;">𝗟𝗶𝗻𝘂𝘅</b>, <b style="color:powderblue;">𝗚𝗜𝗧</b> and <b style="color:powderblue;">𝗦𝗵𝗲𝗹𝗹 and Python </b> scripting.</li>
+                            <li>Proficient in building fully automated <b style="color:powderblue;">𝗖𝗜/𝗖𝗗</b> pipelines for code deployment using <b style="color:powderblue;">𝗚𝗶𝘁𝗹𝗮𝗯 𝗖𝗜</b>, <b style="color:powderblue;">Jenkins</b>, etc.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗗𝗼𝗰𝗸𝗲𝗿</b> and container orchestration tools such as <b style="color:powderblue;">𝗞𝘂𝗯𝗲𝗿𝗻𝗲𝘁𝗲𝘀</b>, <b style="color:powderblue;">𝗗𝗼𝗰𝗸𝗲𝗿-𝗦𝘄𝗮𝗿𝗺</b>.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗛𝗲𝗹𝗺</b> charts to develop, manage and release helm packages for k8s.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗧𝗲𝗿𝗿𝗮𝗳𝗼𝗿𝗺</b> to automate & setup infrastructures on Cloud service providers.</li>
-                            <li>Proficient with metric collection & monitoring tools such as <b style="color:powderblue;">𝗧𝗲𝗹𝗲𝗴𝗿𝗮𝗳</b>, <b style="color:powderblue;">𝗣𝗿𝗼𝗺𝗲𝘁𝗵𝗲𝘂𝘀</b>, etc.</li>
-                            <li>Proficient with metric analytics & visualization using <b style="color:powderblue;">𝗚𝗿𝗮𝗳𝗮𝗻𝗮</b>.</li>
-                            <li>Experience with Cloud service providers (CSPs), including <b style="color:powderblue;">𝗗𝗶𝗴𝗶𝘁𝗮𝗹 𝗢𝗰𝗲𝗮𝗻</b>, <b style="color:powderblue;">𝗔𝗺𝗮𝘇𝗼𝗻 𝗪𝗲𝗯 𝗦𝗲𝗿𝘃𝗶𝗰𝗲𝘀 ( 𝗔𝗪𝗦 )</b>.</li>
-                            <li>Experience with Web Servers and Load Balancers / Reverse Proxy tools such as <b style="color:powderblue;">𝗡𝗴𝗶𝗻𝘅</b> and <b style="color:powderblue;">𝗧𝗿𝗮𝗲𝗳𝗶𝗸</b>.</li>
-                            <li>Experience with various Time-series Databases such as <b style="color:powderblue;">𝗜𝗻𝗳𝗹𝘂𝘅𝗗𝗕</b>, <b style="color:powderblue;">𝗧𝗶𝗺𝗲𝘀𝗰𝗮𝗹𝗲𝗗𝗕</b>.</li>
-                            <li>Experience with Relational Databases (<b style="color:powderblue;">𝗠𝘆𝗦𝗤𝗟</b>, <b style="color:powderblue;">𝗣𝗼𝘀𝘁𝗴𝗿𝗲𝗦𝗤𝗟</b> ) and NoSQL databases ( <b style="color:powderblue;">𝗠𝗼𝗻𝗴𝗼𝗗𝗕</b> ).</li>
-                            <li>Past experience with <b style="color:powderblue;">𝗠𝗘𝗥𝗡 ( 𝗠𝗼𝗻𝗴𝗼𝗗𝗕, 𝗘𝘅𝗽𝗿𝗲𝘀𝘀. 𝗷𝘀, 𝗥𝗲𝗮𝗰𝘁, 𝗮𝗻𝗱 𝗡𝗼𝗱𝗲. 𝗷𝘀 )</b> stack.</li>
+                            <li>Experience with Relational Databases (<b style="color:powderblue;">postgresql</b>, <b style="color:powderblue;">𝗣𝗼𝘀𝘁𝗴𝗿𝗲𝗦𝗤𝗟</b> ) and NoSQL databases ( <b style="color:powderblue;">𝗠𝗼𝗻𝗴𝗼𝗗𝗕</b>, <b style="color:powderblue;">Elasticsearch</b> ).</li>
                           </ul>
                 </div>
 
