--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
             A highly motivated and energetic team player with excellent communication and interpersonal skills.
             <br>
             <br>
-            I am Fully-committed to designing, build and developing Cloud-Native infrastructure, I am highly self-motivated, enthusiastic and always willing to learn more. 
+            I am Fully-committed to designing, build and developing Cloud-Native and Kubernates-centric platform, I am highly self-motivated, enthusiastic and always willing to learn more. 
                 <p>
                 </p>
                 <div>
                         <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
                             <li>I mostly work on <b style="color:powderblue;">Kubernates-centric</b> and <b style="color:powderblue;">Cloud platform</b>.</li>
-                            <li>Proficient in Observability tools such as <b style="color:powderblue;">Prometheus</b>, <b style="color:powderblue;">Grafana</b>, <b style="color:powderblue;">Kibana</b>, <b style="color:powderblue;">FluentD</b>, <b style="color:powderblue;">Jaeger</b></li>  
-                            <li>Proficient with <b style="color:powderblue;">Linux</b> / <b style="color:powderblue;">𝗟𝗶𝗻𝘂𝘅</b>, <b style="color:powderblue;">𝗚𝗜𝗧</b> and <b style="color:powderblue;">𝗦𝗵𝗲𝗹𝗹 and Python </b> scripting.</li>
-                            <li>Proficient in building fully automated <b style="color:powderblue;">𝗖𝗜/𝗖𝗗</b> pipelines for code deployment using <b style="color:powderblue;">𝗚𝗶𝘁𝗹𝗮𝗯 𝗖𝗜</b>, <b style="color:powderblue;">Jenkins</b>, etc.</li>
+                            <li>Proficient in Observability tools such as <b style="color:powderblue;">Prometheus</b>, <b style="color:powderblue;">Grafana</b>, <b style="color:powderblue;">Kibana</b>, <b style="color:powderblue;">FluentD</b> and <b style="color:powderblue;">Jaeger</b></li>  
+                            <li>Proficient with <b style="color:powderblue;">Linux</b> / <b style="color:powderblue;">𝗟𝗶𝗻𝘂𝘅</b>, <b style="color:powderblue;">𝗚𝗜𝗧</b> and <b style="color:powderblue;">𝗦𝗵𝗲𝗹𝗹, Python </b> scripting.</li>
+                            <li>Proficient in building fully automated <b style="color:powderblue;">𝗖𝗜/𝗖𝗗</b> pipelines for code deployment using <b style="color:powderblue;">𝗚𝗶𝘁𝗹𝗮𝗯 𝗖𝗜</b> and <b style="color:powderblue;">Jenkins</b>, etc.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗗𝗼𝗰𝗸𝗲𝗿</b> and container orchestration tools such as <b style="color:powderblue;">𝗞𝘂𝗯𝗲𝗿𝗻𝗲𝘁𝗲𝘀</b>, <b style="color:powderblue;">𝗗𝗼𝗰𝗸𝗲𝗿-𝗦𝘄𝗮𝗿𝗺</b>.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗛𝗲𝗹𝗺</b> charts to develop, manage and release helm packages for k8s.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗧𝗲𝗿𝗿𝗮𝗳𝗼𝗿𝗺</b> to automate & setup infrastructures on Cloud service providers.</li>
-                            <li>Experience with Relational Databases (<b style="color:powderblue;">postgresql</b>, <b style="color:powderblue;">𝗣𝗼𝘀𝘁𝗴𝗿𝗲𝗦𝗤𝗟</b> ) and NoSQL databases ( <b style="color:powderblue;">𝗠𝗼𝗻𝗴𝗼𝗗𝗕</b>, <b style="color:powderblue;">Elasticsearch</b> ).</li>
+                            <li>Experience with Relational Databases (<b style="color:powderblue;">postgresql</b>, <b style="color:powderblue;">𝗣𝗼𝘀𝘁𝗴𝗿𝗲𝗦𝗤𝗟</b> ) and NoSQL databases ( <b style="color:powderblue;">𝗠𝗼𝗻𝗴𝗼𝗗𝗕</b> and <b style="color:powderblue;">Elasticsearch</b> ).</li>
                           </ul>
                 </div>
 
