--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <li>Proficient with <b style="color:powderblue;">𝗗𝗼𝗰𝗸𝗲𝗿</b> and container orchestration tools such as <b style="color:powderblue;">𝗞𝘂𝗯𝗲𝗿𝗻𝗲𝘁𝗲𝘀</b>, <b style="color:powderblue;">𝗗𝗼𝗰𝗸𝗲𝗿-𝗦𝘄𝗮𝗿𝗺</b>.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗛𝗲𝗹𝗺</b> charts to develop, manage and release helm packages for k8s.</li>
                             <li>Proficient with <b style="color:powderblue;">𝗧𝗲𝗿𝗿𝗮𝗳𝗼𝗿𝗺</b> to automate & setup infrastructures on Cloud service providers.</li>
-                            <li>Experience with Relational Databases (<b style="color:powderblue;">postgresql</b>, <b style="color:powderblue;">𝗣𝗼𝘀𝘁𝗴𝗿𝗲𝗦𝗤𝗟</b> ) and NoSQL databases ( <b style="color:powderblue;">𝗠𝗼𝗻𝗴𝗼𝗗𝗕</b> and <b style="color:powderblue;">Elasticsearch</b> ).</li>
+                            <li>Experience with Relational Databases (<b style="color:powderblue;">𝗣𝗼𝘀𝘁𝗴𝗿𝗲𝗦𝗤𝗟</b>) and NoSQL databases ( <b style="color:powderblue;">𝗠𝗼𝗻𝗴𝗼𝗗𝗕</b> and <b style="color:powderblue;">Elasticsearch</b> ).</li>
                           </ul>
                 </div>
 
