--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Manjul Solanke</title>
     <meta name="description" content="DevOps Engineer">
-    <meta name="keywords" content="Go Developer, Golang Developer, DevOps, DevOps Engineer, Freelancer, Go, Golang, Kubernetes, Docker, GRPC, Terraform, Helm, HTML, CSS, JavaScript">
+    <meta name="keywords" content="DevOps Engineer, Cloud Engineer, Kubernetes, Docker, Python">
     <meta name="author" content="Manjul Solanke">
     <meta property="og:image" content="https://github.com/manjulsolanke/manjulsolanke/blob/main/images/myphoto.png?raw=true" />
-    <meta property='og:title' content="Golang Developer, DevOps Engineer, Freelancer"/>
-    <meta property='og:description' content="I mostly work with Golang and Cloud-Native technologies!"/>
+    <meta property='og:title' content="DevOps Engineer, cloud Engineer"/>
+    <meta property='og:description' content="I mostly work with Cloud-Native  and Kubernetes technologies!"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
