--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             A highly motivated and energetic team player with excellent communication and interpersonal skills.
             <br>
             <br>
-            I am Fully-committed to designing, build and developing Cloud-Native and Kubernates-centric platform, I am highly self-motivated, enthusiastic and always willing to learn more. 
+            I am Fully-committed to designing, build and developing Cloud-Native and Kubernetes-centric platform, I am highly self-motivated, enthusiastic and always willing to learn more. 
                 <p>
                 </p>
                 <div>
                         <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
-                            <li>I mostly work on <b style="color:powderblue;">Kubernates-centric</b> and <b style="color:powderblue;">Cloud platform</b>.</li>
+                            <li>I mostly work on <b style="color:powderblue;">Kubernetes-centric</b> and <b style="color:powderblue;">Cloud platform</b>.</li>
                             <li>Proficient in Observability tools such as <b style="color:powderblue;">Prometheus</b>, <b style="color:powderblue;">Grafana</b>, <b style="color:powderblue;">Kibana</b>, <b style="color:powderblue;">FluentD</b> and <b style="color:powderblue;">Jaeger</b></li>  
                             <li>Proficient with <b style="color:powderblue;">Linux</b> / <b style="color:powderblue;">𝗟𝗶𝗻𝘂𝘅</b>, <b style="color:powderblue;">𝗚𝗜𝗧</b> and <b style="color:powderblue;">𝗦𝗵𝗲𝗹𝗹, Python </b> scripting.</li>
                             <li>Proficient in building fully automated <b style="color:powderblue;">𝗖𝗜/𝗖𝗗</b> pipelines for code deployment using <b style="color:powderblue;">𝗚𝗶𝘁𝗹𝗮𝗯 𝗖𝗜</b> and <b style="color:powderblue;">Jenkins</b>, etc.</li>
@@ -82,7 +82,7 @@
                   <h1>Career.</h1>
                   </div>
                   <h2><b style="color:powderblue;">DevOps Engineer</b> at GlobalLogic &nbsp;&nbsp;</h2> 
-                  <p>In the late  2018, I started DevOps Engineer journey at GlobalLogic, I had the chance to work on Cloud-Native, Kubernetes-centric and Miroservice based architecture. 
+                  <p>In late  2018, I started DevOps Engineer journey at GlobalLogic, I had the chance to work on Cloud-Native, Kubernetes-centric and Microservice based architecture. 
                     <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
                       <li>Design, build and deploy Kubernetes platform on AWS cloud for Microservices based architecture. .</li>
                       <li>Implemented centralized logging using Kibana, Elasticsearch and Filebeat/Fluentd.</li>
@@ -94,7 +94,7 @@
                       <li>Creating repeatable and templated deployments for Kubernetes applications with help of Helm.</li>
                     </ul>
                   <h2><b style="color:powderblue;">Platform Engineer</b> at Persistent Systems  &nbsp;&nbsp;</h2> 
-                  <p>At Persistent System I worked as Platform Engineer in IOT domain. Played mutiple roles such as Platform Engineer, DevOps engineer and Team lead.</p> 
+                  <p>At Persistent System, I worked as a Platform Engineer in IoT domain. Played mutiple roles such as Platform Engineer, DevOps engineer and Team lead.</p> 
                     <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
                       <li>Worked on XEN and KVM based environment. Managing and supporting AWS based infrastructure.</li>
                       <li>Deployed and configured Ansible playbooks to configure and run tasks.</li>
@@ -105,7 +105,7 @@
                     <ul style="display: table;margin: 10 auto;padding: 10px;list-style-type:circle;">
                       <li>Supporting the critical application in development and production env running on Linux
                         servers (RHEL, OLE, SUSE and CentOS) in VMware virtualization and cloud infrastructure.</li>
-                      <li>Live migration of VMs and storage using VMotion and Storage VMotion within and across ESXihosts/storage arrays without service disruptions.</li>
+                      <li>Live migration of VMs and storage using VMotion and Storage VMotion within and across ESXi hosts/storage arrays without service disruptions.</li>
                       <li>Working closely with the IT security team to Security Vulnerability scanning and fixing security issue on Linux servers.</li>
                     </ul>
                   <h2><b style="color:powderblue;">Unix Admin</b> at Wipro Technologies &nbsp;&nbsp;</h2> 
