--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- This is a comment -->
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -199,3 +200,4 @@ during, build, deployment and runtime using different tools.</li>
       });
     </script>
   </body></html>
+<!-- Remember to add more information here -->
