--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Professional Portfolio - Full Stack Developer</title>
+    <title>MlOps Engineer</title>
     <meta name="description" content="Professional portfolio showcasing web development projects, experience, and skills in React, TypeScript, and modern web technologies." />
     <meta name="author" content="Your Name" />
     <meta name="keywords" content="web developer, full stack developer, React, TypeScript, portfolio, software engineer" />
